# lib-open-bsc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cli-standards.md
include/: CMakeLists.txt
include/libOpenBSC/: libOpenBSC.h
include/libSerial/: libSerial.h
src/: CMakeLists.txt
src/libOpenBSC/: CMakeLists.txt  OpenBSC.cpp  OpenBSC.hpp  libOpenBSC.cpp  readme.md
src/libSerial/: CMakeLists.txt  PortManager.cpp  PortManager.hpp  PortManagerWindows.cpp  Serial.cpp  Serial.hpp  SerialWindows.cpp  libSerial.cpp
src/toolMediumTerminal/: CMakeLists.txt  MediumTerminal.cpp  MediumTerminal.h  SdkWrapper.cpp  SdkWrapper.h  main.cpp
